# html-resource-embedder

./: README.md  html-resource-embedder.py  pyproject.toml
