[tool.poetry]
name = "html-resource-embedder"
version = "0.1.0"
description = "A tool to embed all resources (images, CSS, JavaScript) into HTML files"
authors = ["Juraj <juraj@bednar.io>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
